<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/scrollview"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/authentication_container_padding">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/emailWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/authentication_text_input_margin_vertical"
            android:layout_marginTop="@dimen/authentication_text_input_margin_vertical"
            android:textColorHint="@color/colorPrimary"
            app:hintEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_input_edit_hint"
                android:inputType="textEmailAddress"
                android:textColor="@color/colorPrimaryText"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/passwordWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/emailWrapper"
            android:layout_marginBottom="@dimen/authentication_text_input_margin_vertical"
            android:layout_marginTop="@dimen/authentication_text_input_margin_vertical"
            android:textColorHint="@color/colorPrimary"
            app:hintEnabled="true"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/colorPasswordHint">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_input_edit_hint"
                android:inputType="textPassword"
                android:textColor="@color/colorPrimaryText"/>

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/loginButton"
            android:layout_width="@dimen/authentication_button_width"
            android:layout_height="@dimen/authentication_button_height"
            android:layout_below="@id/passwordWrapper"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/authentication_button_margin_vertical"
            android:layout_marginTop="@dimen/authentication_button_margin_vertical"
            android:text="@string/button_sign_in"
            android:theme="@style/TallyTheme.Button"/>

    </RelativeLayout>

</ScrollView>